--- a/index.html
+++ b/index.html
@@ -5,35 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>WordBeater</title>
+  <title>WordWinner</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
     <link rel="stylesheet" href="css/styles.css">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body class="bg-dark text-white ">
 
-<!--   
-  <div id="capture" style="padding: 10px; background: #f5da55">
-    <iframe src="300x250/index.html"></iframe>
-  
-    <h4 style="color: #000; ">Hello world!</h4>
-  </div>
-
-  <div class="box" id="second-screenshot">
-    <img src="test.png" alt="" />
-  </div>
-
-  <button id="take-screenshot">Take screenshot</button>
-  <button id="take-screenshot-2">Take screenshot normal div</button> -->
-
-
   <header class="bg-secondary text-center p-3 mb-5">
     <h1>IT Acronyms Beater</h1>
   </header>
+
+  <select id="game-level" class="level-select">
+    <option value="1">Easy</option>
+    <option value="2">Medium</option>
+    <option value="3">Hard</option>
+  </select>
+
   <div class="container text-center">
 
     <!-- Word & Input -->
@@ -43,7 +32,7 @@
           <span class="text-success" id="seconds">5</span> Seconds:</p>
         <h2 class="display-2 mb-5" id="current-word">hello</h2>
         <input type="text" class="form-control form-control-lg" placeholder="Start typing..." id="word-input" autofocus>
-        <!-- <button id="start">Start</button> -->
+        <button id="start">Start</button>
         <h4 class="mt-3" id="message"></h4>
 
         <!-- Time & Score Columns -->
@@ -81,8 +70,6 @@
     </div>
   </div>
 
-
   <script src="js/main.js"></script>
 </body>
-
 </html>
